--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ dependencies = [
     "black (>=25.1.0,<26.0.0)",
     "pillow (>=11.1.0,<12.0.0)",
     "ipython (>=9.0.2,<10.0.0)",
-    "django (==4.2.2)"
+    "django (==4.2.2)",
+    "redis (>=5.2.1,<6.0.0)",
+    "python-dotenv (>=1.1.0,<2.0.0)"
 ]
 
 
